feat(deps): add @talex-touch/unplugin-export-plugin

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "@talex-touch/unplugin-export-plugin": "catalog:dev",
     "@unhead/vue": "catalog:frontend",
     "@unocss/reset": "catalog:frontend",
     "@vueuse/core": "catalog:frontend",
