feat: enhance translation functionality and update dependencies
- Added TypeScript type definitions for plugin utilities and features in `index.js`.
- Updated logging from `console` to `logger` for better error handling.
- Improved parameter documentation for translation functions.
- Added `@talex-touch/utils` as a dependency in `package.json` and updated the lockfile.
- Adjusted TypeScript configuration to include type roots for better type resolution.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@talex-touch/unplugin-export-plugin": "catalog:dev",
+    "@talex-touch/utils": "catalog:dev",
     "@unhead/vue": "catalog:frontend",
     "@unocss/reset": "catalog:frontend",
     "@vueuse/core": "catalog:frontend",
