--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "~/*": ["src/*"]
     },
     "resolveJsonModule": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "types": [
       "vitest",
       "vite/client",
