--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,67 +1,64 @@
 packages: []
 
 catalogs:
-
   build:
     '@intlify/unplugin-vue-i18n': ^6.0.8
-    '@shikijs/markdown-it': ^3.13.0
-    '@unocss/eslint-config': ^66.5.2
+    '@shikijs/markdown-it': ^3.17.0
+    '@unocss/eslint-config': ^66.5.9
     '@vitejs/plugin-vue': ^5.2.4
     beasties: ^0.2.0
     markdown-it-link-attributes: ^4.0.1
-    rollup: ^4.52.3
-    shiki: ^3.13.0
-    unocss: ^66.5.2
-    unplugin: ^2.3.10
+    rollup: ^4.53.3
+    shiki: ^3.17.0
+    unocss: ^66.5.9
+    unplugin: ^2.3.11
     unplugin-auto-import: ^19.3.0
     unplugin-vue-components: ^28.8.0
     unplugin-vue-macros: ^2.14.5
     unplugin-vue-markdown: ^28.3.1
     unplugin-vue-router: ^0.12.0
-    vite: ^6.3.6
+    vite: ^6.4.1
     vite-bundle-visualizer: ^1.2.1
     vite-plugin-inspect: ^11.3.3
     vite-plugin-pwa: ^0.21.2
-    vite-plugin-vue-devtools: ^7.7.7
+    vite-plugin-vue-devtools: ^7.7.9
     vite-plugin-vue-layouts: ^0.11.0
     vite-ssg: ^26.1.1
     vite-ssg-sitemap: ^0.8.1
-
   dev:
     '@antfu/eslint-config': ^4.19.0
-    '@iconify-json/carbon': ^1.2.13
-    '@talex-touch/unplugin-export-plugin': ^1.2.3
-    '@talex-touch/utils': ^1.0.25
+    '@iconify-json/carbon': ^1.2.14
+    '@talex-touch/unplugin-export-plugin': ^1.2.7
+    '@talex-touch/utils': ^1.0.34
     '@vue-macros/volar': ^3.1.1
     '@vue/test-utils': ^2.4.6
     cypress: ^14.5.4
     cypress-vite: ^1.8.0
-    eslint: ^9.36.0
+    eslint: ^9.39.1
     eslint-plugin-cypress: ^4.3.0
     eslint-plugin-format: ^1.0.2
     https-localhost: ^4.7.1
     lint-staged: ^15.5.2
     simple-git-hooks: ^2.13.1
-    taze: ^19.7.0
-    typescript: ^5.9.2
+    taze: ^19.9.2
+    typescript: ^5.9.3
     vitest: ^3.2.4
     vue-tsc: ^2.2.12
-
   frontend:
-    '@unhead/vue': ^2.0.17
-    '@unocss/reset': ^66.5.2
+    '@unhead/vue': ^2.0.19
+    '@unocss/reset': ^66.5.9
     '@vueuse/core': ^13.9.0
     nprogress: ^0.2.0
-    pinia: ^3.0.3
-    vue: ^3.5.22
-    vue-i18n: ^11.1.12
-    vue-router: ^4.5.1
-
+    pinia: ^3.0.4
+    vue: ^3.5.25
+    vue-i18n: ^11.2.2
+    vue-router: ^4.6.3
   types:
     '@types/markdown-it-link-attributes': ^3.0.5
     '@types/nprogress': ^0.2.3
 
 onlyBuiltDependencies:
   - cypress
+  - electron
   - esbuild
   - simple-git-hooks
