--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
-    "@talex-touch/unplugin-export-plugin": "catalog:dev",
+    "@talex-touch/unplugin-export-plugin": "catalog:conflicts_dev_h1_2_8",
     "@talex-touch/utils": "catalog:dev",
     "@unhead/vue": "catalog:frontend",
     "@unocss/reset": "catalog:frontend",
