--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,6 +25,8 @@ catalogs:
     vite-plugin-vue-layouts: ^0.11.0
     vite-ssg: ^26.1.1
     vite-ssg-sitemap: ^0.8.1
+  conflicts_conflicts_dev_h1_2_8_h1_2_10:
+    '@talex-touch/unplugin-export-plugin': ^1.2.10
   conflicts_dev_h1_2_8:
     '@talex-touch/unplugin-export-plugin': ^1.2.8
 
