--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "description": "一款全平台资源聚合翻译平台，支持多种翻译服务",
   "dev": {
     "enable": true,
-    "address": "http://localhost:3333/",
+    "address": "http://localhost:3333/#/",
     "source": true
   },
   "features": [
