--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -55,6 +55,7 @@ catalogs:
     vue: ^3.5.25
     vue-i18n: ^11.2.2
     vue-router: ^4.6.3
+    vue-sonner: ^2.0.9
   types:
     '@types/markdown-it-link-attributes': ^3.0.5
     '@types/nprogress': ^0.2.3
